<resources>
    <string name="app_name">Dark souls trophies &amp; locations</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="en" translatable="false">English</string>
    <string name="fr" translatable="false">Français</string>

    <string name="trophies">Trophies</string>
    <string name="spells">Spells</string>
    <string name="miracles">Miracles</string>
    <string name="pyromancies">Pyromancies</string>
    <string name="sorceries">Sorceries</string>
    <string name="weapons">Weapons</string>
    <string name="rings">Rings</string>
    <string name="armors">Armors</string>
    <string name="great_magic_weapon">Great magic weapon</string>
    <string name="soul_arrow">Soul arrow</string>
    <string name="all_spells">All spells</string>
    <string name="great_magic_weapon_desc">Sorcery which improves upon Magic Weapon. High magic augmentation: right weapon.  At Vinheim Dragon School, only magic swordsmen on special orders are allowed to learn this spell which grants powerful augmentation to various weapons.</string>
    <string name="soul_arrow_desc">Elementary sorcery. Fire a soul arrow.  Soul arrows inflict magic damage, making them effective against iron armor, tough scales, and other physically resilient materials.</string>
    <string name="acquired">Acquired</string>
    <string name="characteristics">Characteristics</string>
    <string name="slots_used">"Slots used : "</string>
    <string name="spell_uses">"Spell uses : "</string>
    <string name="type">Type :</string>
    <string name="dark_souls_1" translatable="false">Dark souls</string>
    <string name="dark_souls_2" translatable="false">Dark souls 2</string>
    <string name="dark_souls_3" translatable="false">Dark souls 3</string>
    <string name="bloodborne" translatable="false">Bloodborne</string>
    <string name="Wisdom_of_a_Sage">Wisdom of a Sage</string>
    <string name="Wisdom_of_a_Sage_desc">Acquire all sorceries.</string>
    <string name="toDiscover">To discover</string>
    <string name="Trophy">Trophy : </string>
    <string name="intelligence">Intelligence</string>
    <string name="itemList">Item list</string>
    <string name="confirmAcquiredTrophy">Are you sure you have acquired the %1$s trophy?</string>
    <string name="confirmUncheckTrophy">Are you sure you want to uncheck the %1$s trophy? This will uncheck all the %2$s linked to this trophy.</string>
    <string name="emptyList">This list is empty</string>
    <string name="sellerName">Seller name</string>
    <string name="griggs_of_vinheim">Griggs of Vinheim</string>
    <string name="taurus_demon">Taurus demon</string>
    <string name="asylum_demon">Asylum demon</string>
    <string name="big_hat_logan">Big Hat Logan</string>
    <string name="blacksmith_rickert_of_vinheim">Rickert of Vinheim</string>
    <string name="cost">Cost</string>
    <string name="or">or</string>
    <string name="availability">Availability</string>
    <string name="starting_sorcery_for_the_Sorcerer_class">Starting sorcery for the Sorcerer class</string>
    <string name="changeGame">Change game</string>

</resources>