<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_trophies"
        android:icon="@drawable/ic_menu_camera"
        android:title="@string/trophies" />
    <item
        android:id="@+id/nav_all_spells"
        android:icon="@drawable/ic_menu_camera"
        android:title="@string/all_spells" />
    <item
        android:id="@+id/nav_sorceries"
        android:icon="@drawable/ic_menu_share"
        android:title="@string/sorceries" />
    <item
        android:id="@+id/nav_miracles"
        android:icon="@drawable/ic_menu_send"
        android:title="@string/miracles" />
    <item
        android:id="@+id/nav_pyromancies"
        android:icon="@drawable/ic_menu_send"
        android:title="@string/pyromancies" />
    <item
        android:id="@+id/nav_weapons"
        android:icon="@drawable/ic_menu_camera"
        android:title="@string/weapons" />
    <item
        android:id="@+id/nav_armors"
        android:icon="@drawable/ic_menu_camera"
        android:title="@string/armors" />
    <item
        android:id="@+id/nav_rings"
        android:icon="@drawable/ic_menu_camera"
        android:title="@string/rings" />
    <item
        android:id="@+id/nav_change_game"
        android:icon="@drawable/ic_menu_camera"
        android:title="@string/changeGame" />
</menu>
